--- a/Desktop/Codify/Projects/Week7/week7project/index.html
+++ b/Desktop/Codify/Projects/Week7/week7project/index.html
@@ -8,7 +8,7 @@
 	<!-- BOOTSTRAP -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<!-- INDIVIDUAL GOOGLE FONTS -->
-		<link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Amatic+SC|Bangers|BenchNine|Crete+Round|Homemade+Apple|Julius+Sans+One|Lobster|Prosto+One|Ultra" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Crete+Round|Julius+Sans+One" rel="stylesheet">
 		<!--FONTAWESOME FOR ICONS // CSS CDN-->
 		<link rel="stylesheet" href="https://use.fontawesome.com/5cb33b5142.css">
 		<!--CUSTOM CSS -->
@@ -37,7 +37,7 @@
 			<!-- 		<div class="col-3 input-group input-day-size mb-3 mr-auto p-0">
 					<input id="userInput2" type="text" class="form-control" placeholder="..." aria-label="Name:" aria-describedby="basic-addon1">
 				</div> -->
-			 <!--  <span class="border mt-3"> -->
+			<!--   <span class="mt-3"> -->
 				<div class="form-group col-md-4 input-month-size ml-auto">
 			    <!--   <label id="labelMonth" for="inputState">Month</label> -->
 			      <select id="userInput1" class="form-control">
@@ -98,7 +98,7 @@
 			</div>
 
 	<!-- 			<button class="col-2" onclick="getZodiac()">Get Zodiac Sign</button>
-	 -->		<div class="container-fluid pb-3 pt-3">
+	 -->		<div class="container pb-3 pt-3">
 					<div class="col-12 text-center">	
 
 						<!-- BUTTON -->
